<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hyperdev.playfragments.MainActivity">

    <fragment
        android:id="@+id/fragment"
        android:name="com.hyperdev.playfragments.fragments.RedFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        tools:layout="@layout/fragment_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <FrameLayout
            android:id="@+id/red_fragment_container"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addDynamicFragment"
        android:text="@string/text_add_red_fragment"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="replaceRedWithColorFragment"
        android:text="@string/text_replace_red_to_color"/>

    <RadioGroup
        android:id="@+id/btnColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnCyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cyan"/>

        <RadioButton
            android:id="@+id/btnGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_green"/>

        <RadioButton
            android:id="@+id/btnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_yellow"/>
    </RadioGroup>

</LinearLayout>
